--- a/frontend/MiMedicacion/src/app/components/shareds/footer/footer.component.html
+++ b/frontend/MiMedicacion/src/app/components/shareds/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<p class="text-center">
+    Miguel Belmonte Granados
+    <a href="https://www.linkedin.com/in/mbg9/" target="_blank" title="LinkedIn">
+        <span class="mdi mdi-linkedin mdi-24px"></span>
+    </a>
+    <a href="https://github.com/Mbg999" target="_blank" title="GitHub">
+        <span class="mdi mdi-github mdi-24px"></span>
+    </a>
+</p>
