--- a/frontend/MiMedicacion/src/styles.css
+++ b/frontend/MiMedicacion/src/styles.css
@@ -1,4 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* FONTS */
+/* https://fonts.google.com/specimen/Rowdies */
+@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap');
+
+/* https://fonts.google.com/specimen/Open+Sans */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+
+h1, h2, h3, .display-1, .display-2, .display-3, .display-4 {
+  font-family: 'Rowdies', cursive !important;
+}
+
+*:not(.menu):not(h1):not(h2):not(h3)
+:not(.display-1):not(.display-2):not(.display-3):not(.display-4)
+:not(.ui-sortable-column-icon):not(.ui-dropdown-trigger-icon):not(.ui-paginator-icon) { /* primeng icons */
+  font-family: 'Open Sans', sans-serif;
+}
+/* /FONTS */
+
+/* STRUCTURE SETTINGS */
 html, #main_container { /* body has the height: 100% at index.html, for overwrite a sweetalert class who desplaces the footer to the top */
   height: 100%;
 }
@@ -20,6 +40,11 @@ footer {
   width: 40px;
   height: 40px;
 }
+
+.ngb-toasts {
+  top: 55px !important;
+}
+/* /STRUCTURE SETTINGS */
 
 /* ANIMATIONS, ANIMATE CSS https://github.com/daneden/animate.css */
 .animated {
