favicon and some css on home

--- a/frontend/MiMedicacion/src/app/components/home/home.component.css
+++ b/frontend/MiMedicacion/src/app/components/home/home.component.css
@@ -26,3 +26,8 @@
     background-color: rgb(255, 193, 193);
     border-radius: 10px;
 }
+
+.name {
+    font-weight: bold;
+    font-size: 18px;
+}
