small footer css change

--- a/frontend/MiMedicacion/src/app/components/shareds/footer/footer.component.html
+++ b/frontend/MiMedicacion/src/app/components/shareds/footer/footer.component.html
@@ -1,4 +1,4 @@
-<p class="text-center">
+<p class="text-center m-0">
     Miguel Belmonte Granados
     <a href="https://www.linkedin.com/in/mbg9/" target="_blank" title="LinkedIn">
         <span class="mdi mdi-linkedin mdi-24px"></span>
