--- a/frontend/MiMedicacion/src/app/app.component.html
+++ b/frontend/MiMedicacion/src/app/app.component.html
@@ -7,7 +7,7 @@
     <main class="container position-relative">
         <router-outlet></router-outlet>
     </main>
-    <footer class="position-absolute w-100 bg-info text-light">
+    <footer class="position-relative w-100 bg-info text-light">
         <app-footer></app-footer>
     </footer>
     <app-toasts></app-toasts>
