--- a/frontend/MiMedicacion/src/app/components/home/home.component.html
+++ b/frontend/MiMedicacion/src/app/components/home/home.component.html
@@ -115,7 +115,7 @@
                             <div *ngFor="let taken of medication.takens; let j = index"
                             class="d-flex justify-content-between py-2 pl-2 pr-1"
                             [ngClass]="{'bg-light': j%2==0}">
-                                <p>{{ taken.taken_at }}</p>
+                                <p>{{ taken.taken_at | date:'dd/MM/yyyy hh:mm' }}</p>
                                 <button type="button"
                                 class="btn btn-danger btn-small"
                                 (click)="deleteTaken(i, j)">
