--- a/frontend/MiMedicacion/src/app/components/auth/auth.component.html
+++ b/frontend/MiMedicacion/src/app/components/auth/auth.component.html
@@ -1,4 +1,7 @@
 <div class="row">
+    <div class="col-12">
+        <img src="assets/logo.png" title="Mi Medicación" class="d-block logo mx-auto">
+    </div>
     <div class="col-12 col-md-8 col-lg-6 mx-md-auto">
         <div class="mt-3">
             <div *ngIf="isLogin; else register">
